# agent-zero

./: .dockerignore  .env  .env.enhanced_models_example  .gitignore  .mypy.ini  AI_enhanced.py  ARCHITECTURE_ENHANCEMENT_ROADMAP.md  Agent-Zero-Docker-Setup.md  CLAUDE.md  CSS_Cleanup_Plan.md  Dockerfile  DockerfileLocal  EDUCATIONAL_TRANSFORMATION_COMPLETE.md  ENHANCED_ARCHITECTURE_README.md  INFINITE_CONTEXT_INTEGRATION_GUIDE.md  LICENSE  MARKED_BENEFITS.md  Makefile  OPTIMIZATION_GUIDE.md  README.md  SAKANA_INTEGRATION_SUMMARY.md  THOUGHTS.md  VISUALLEARN_IMPLEMENTATION.md  a2h.py  a2h_tools.py  agent.py  agent.system.educational_strategies.md  agent.system.main.solving.md  agent.system.main.tips.md  agent.system.tool.call_sub.md  agent.system.tool.knowledge.md  agent.system.tool.memory.md  agent.system.tool.response.md  agent_activity_monitor.py  app.py  bundle.py  config.json  demo_enhanced_system.py  diff.md  directory_structure.txt  (+68 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.scripts/: deploy.sh
agent/: __init__.py  agent_context.py  agent_types.py  config.py  messages.py  pyvenv.cfg  requirements.txt  test_agent.py
agent-zero/: .gitignore  models.py
agent-zero-main/: .cursorignore  .gitignore  .markdownlint.json  README.md  agent.py  config.py  initialize.py  models.py  requirements.txt  run_cli.py  run_ui.py  test.py  test_fallback.py  test_fallback_isolated.py
agent0range/: HOWTO.md  README.md
agent_core/: server.py
agent_zero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentzero-commerce/: Dockerfile  README.md  alembic.ini  docker-compose.yml
architecture_enhancement/: integration_test_framework.py  intelligence_framework.py  learning_framework.py  scalability_framework.py  universal_framework.py
bundle/: bundle.py  macos_bundle.sh  requirements.txt  windows_bundle.bat
conf/: model_providers.yaml
configs/: lmstudio-models.json
data/: cdn_surah_audio.json  search_sites.json
default/: index.faiss  index.pkl
docker/: .bashrc  Dockerfile  agent-zero.dockerfile  build.txt  docker-compose.yml  docker_manager_mac_linux.sh  initialize.sh  requirements.txt
docs/: 1_welcome.md  2_installation.md  3_quickstart.md  4_usage.md  5_architecture.md  6_contribution.md  7_troubleshooting.md  README.md  a2a_integration.md  a2a_subordinates.md  agent_zero_canvas_live_artifact_plan.md  architecture.md  artifact_canvas.md  book.txt  canvas.md  connectivity.md  contribution.md  cuda_docker_setup.md  development.md  extensibility.md  filter_expressions.md  hacking_and_customization.md  index.md  installation.md  knowledge_and_rag.md  mcp_setup.md  nixos.md  notifications.md  quickstart.md  troubleshooting.md  tunnel.md  usage.md  win_installation_guide.md  win_installation_guide.txt
examples/: a2a_enhanced_subordinates_demo.py  a2a_multi_agent_workflow.py
prompts/: agent.context.extras.md  agent.extras.agent_info.md  agent.extras.sudo_commands_admin.md  agent.extras.sudo_commands_user.md  agent.memory.md  agent.system.a2a.peer_management.md  agent.system.behaviour_default.md  agent.system.graph_knowledge.md  agent.system.main.md  agent.system.main.role.md  agent.system.main.solving.md  agent.system.md  agent.system.parallel_tools_workflow.md  agent.system.tool.a2a.md  agent.system.tool.a2a_chat.md  agent.system.tool.a2a_subordinate_manager.md  agent.system.tool.behaviour.md  agent.system.tool.call_sub.md  agent.system.tool.call_sub.py  agent.system.tool.graphrag_delete.md  agent.system.tool.graphrag_ingest.md  agent.system.tool.graphrag_query.md  agent.system.tool.graphrag_reset.md  agent.system.tool.input.md  agent.system.tool.knowledge.md  agent.system.tool.knowledge_index.md  agent.system.tool.notify_user.md  agent.system.tool.pass_microphone.md  (+44 more)
(+3819 files in other folders)
